--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@ android:orientation="vertical"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/bud"
+        android:id="@+id/et"
         android:hint="budget"
         tools:gravity="center"
         android:selectAllOnFocus="false"
