--- a/app/src/main/res/layout/custom_row2.xml
+++ b/app/src/main/res/layout/custom_row2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:text="TextView"
@@ -19,10 +19,4 @@
         android:id="@+id/imageView"
         android:layout_weight="1" />
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_weight="1" />
 </LinearLayout>
